Fixed the side nav menu on mobile view
the issues was the side nav menu always shows whenever the page reloads and then transitions to hide (fixed)

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -33,6 +33,10 @@
     animation: scale-pulse 1s ease-in-out infinite;
   }
 }
+
+[x-cloak] { display: none !important; }
+
+
 /* -------------------------------- */
 /* -------------------------------- */
 
